# my-first-pretrained-llm

./: .gitignore  README.md  pyproject.toml  readme-md-first-read-this-majestic-peach.md  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/data/: c4_text.yaml  code_only.yaml  finance_only.yaml  pretrain_mix.yaml
configs/model/: khanh_150m.yaml  khanh_15b_moe.yaml  khanh_1b.yaml  khanh_700m.yaml
configs/train/: lora_local.yaml  pretrain_5080.yaml  qlora_external.yaml  sft_chat.yaml  sft_code.yaml  sft_finance.yaml
data/tokenizers/starcoder2-3b/: tokenizer.json  tokenizer_config.json
docs/: 00-overview.md  01-architecture.md  02-training-recipe.md  03-data-pipeline.md  04-rtx5080-tuning.md  05-roadmap.md  06-web-app-design.md  07-evaluation.md  08-finetuning.md  09-finance-domain.md
khanh_tokenizer/: tokenizer.json
models/: khanh_llm.py
scripts/: build_tokenizer.py  generate.py  generate_text.py  plot_loss.py  test_causal_mask.py  test_mask.py  train.py
scripts/data/: build_tokenizer.py  download_starcoder_tokenizer.py  pack_fim.py  prepare_finance_corpus.py  prepare_pretrain_corpus.py  prepare_sft_dataset.py  test_causal_mask_legacy.py
scripts/eval/: finance_qa.py  humaneval.py  perplexity.py  plot_loss.py
scripts/finetune/: dpo.py  lora_merge.py  sft.py
scripts/inference/: chat_cli.py
scripts/train/: pretrain.py
src/khanh_llm/: __init__.py  config.py
src/khanh_llm/data/: __init__.py  fim.py  shards.py  streaming.py  tokenizer.py
src/khanh_llm/eval/: __init__.py  code_eval.py  finance_eval.py  perplexity.py
src/khanh_llm/finetune/: __init__.py  adapters.py  chat_templates.py  dpo.py  lora.py  sft.py
src/khanh_llm/inference/: __init__.py  generator.py  samplers.py
src/khanh_llm/model/: __init__.py  attention.py  ffn.py  moe.py  norm.py  rope.py  transformer.py
src/khanh_llm/training/: __init__.py  checkpoint.py  logging.py  optim.py  trainer.py
tests/: test_data_packing.py  test_kv_cache.py  test_model_forward.py  test_moe_balance.py
web/: README.md
web/backend/: Dockerfile  pyproject.toml
web/backend/app/: __init__.py  main.py  model_service.py  schemas.py
web/backend/app/routes/: generate.py  health.py
web/frontend/: README.md
