[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khanh-llm"
version = "0.1.0"
description = "KhanhLLM — a coding-focused LLM trained from scratch on an RTX 5080"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.2.0",
    "bitsandbytes>=0.43.0",
    "transformers>=4.40.0",
    "tokenizers>=0.19.0",
    "datasets>=2.19.0",
    "accelerate>=0.29.0",
    "peft>=0.10.0",
    "safetensors>=0.4.3",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=1.8.2",
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ── Ruff (linter + formatter) ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["khanh_llm"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # many ML libs lack stubs
strict = false                  # loosen until codebase is more mature

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
