[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "khanh-llm-backend"
version = "0.1.0"
description = "FastAPI backend for KhanhLLM inference"
requires-python = ">=3.10"

dependencies = [
    "khanh-llm",          # installs the core package from ../..
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=1.8.2",
    "pydantic>=2.7.0",
]
